# cmake-showcase

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: windows-build.yml
assembly-demo/: CMakeLists.txt  README.md  main.s
boost_test/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
cmake/: useCompilerCache.cmake
lib-debug/: CMakeLists.txt  main.cpp  stack-buffer.cpp  stack-buffer.h
linux_api/: CMakeLists.txt  main.cpp
predefined-macro/: CMakeLists.txt  main.cpp
